Fix icon change when collapsing a node

--- a/public/css/module.less
+++ b/public/css/module.less
@@ -376,7 +376,7 @@
     content: '\e81d';
   }
 
-  .collapsed {
+  .tlv-collapsed {
     .icon.tlv-collapse-handle::before {
       content: '\e820';
     }
